# Multi-Agent-AI-Research-System

./: .gitignore  EXTENSION_PLAN.md  PROJECT_MEMORY.md  README.md  agent.py  api.py  database.py  main.py  package-lock.json  pipeline.py  pyproject.toml  requirements.txt  schemas.py  tools.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Navbar.jsx
frontend/src/pages/: History.jsx  Home.jsx  Results.jsx
